[project]
name = "mst-radar-abs"
version = "0.1.0"
description = "Implementation of Adaptive-Bayesian Shrinkage for MST Radar"
authors = [
    {name = "Simeon Palla",email = "simeonpalla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
